# aeternusdb

./: CHANGELOG.md  Cargo.toml  README.md  crates.js  deny.toml  help.html  index.html  settings.html  src-files.js
.github/workflows/: audit.yml  bench.yml  ci.yml  coverage.yml  docs.yml  miri.yml  semver.yml
aeternusdb/: all.html  enum.CompactionStrategyType.html  enum.DbError.html  index.html  sidebar-items.js  struct.BackgroundPool.html  struct.Db.html  struct.DbConfig.html  type.KeyValue.html
aeternusdb/compaction/: enum.CompactionError.html  enum.CompactionStrategyType.html  fn.dedup_records.html  fn.finalize_compaction.html  fn.full_range_scan_iters.html  index.html  sidebar-items.js  struct.CompactionResult.html  trait.CompactionStrategy.html
aeternusdb/encoding/: constant.MAX_BYTE_LEN.html  constant.MAX_VEC_ELEMENTS.html  enum.EncodingError.html  fn.decode_from_slice.html  fn.decode_vec.html  fn.encode_to_vec.html  fn.encode_vec.html  fn.len_to_u32.html  fn.require.html  index.html  sidebar-items.js  trait.Decode.html  trait.Encode.html
aeternusdb/engine/: constant.MANIFEST_DIR.html  constant.MEMTABLE_DIR.html  constant.SSTABLE_DIR.html  enum.EngineError.html  (+8 more)
benches/: micro.rs  ycsb.rs
doc/: architecture.md  benchmarking.md  compaction.md  compaction_guide.md  encoding.md  getting_started.md  manifest.md  memtable.md  sstable.md  todo.md  wal.md
search.index/: 0006abd0da64.js  00511e9bcca9.js  00787f72c731.js  008f452a74ff.js  00cb5c0173f2.js  01609c8d4596.js  017645bcef9a.js  01bdc953d27a.js  01cd3536c70c.js  01d1ee5585ff.js  0256158aa4ad.js  0272de519e39.js  02898d69f7b2.js  034ddaebf4be.js  03af78524e22.js  03d9dbdd9b2f.js  045173573fa7.js  0453835105b0.js  0488d52e23b7.js  049b3c0adb26.js  0507faec1100.js  0522738560ce.js  05867f904ae0.js  058ae445d7b8.js  05dc152da7ac.js  05e59a2976bf.js  05fe69b4e0b7.js  06384bc71879.js  06ca18c55550.js  06e7fd9bec1b.js  07c9b0554e48.js  084d99602528.js  09332c088e73.js  097be3561fce.js  098cacff4775.js  09b2732e5caf.js  09c1f470698f.js  09ca165fbb49.js  09d37c5c4fa4.js  0aac68e7d52e.js  (+444 more)
src/: lib.rs  memtable.rs  wal.rs
tests/: integration.rs  integration_coverage.rs  integration_hardening.rs
(+781 files in other folders)
