[package]
name = "aeternusdb"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A library that provides an embeddable, persistent key-value store for fast storage."
readme = "README.md"
repository = "https://github.com/kamil-kielbasa/aeternusdb"

[dependencies]
bincode = "2.0.1"
bloomfilter = "3.0.1"
crc32fast = "1.5.0"
crossbeam = "0.8.4"
memmap2 = "0.9.9"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3.23.0"
