[package]
name = "aeternusdb"
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "A library that provides an embeddable, persistent key-value store for fast storage."
readme = "README.md"
repository = "https://github.com/kamil-kielbasa/aeternusdb"

[dependencies]
bloomfilter = "3.0.1"
crc32fast = "1.5.0"
crossbeam = "0.8.4"
memmap2 = "0.9.9"
thiserror = "2.0.17"
tracing = "0.1.41"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.9"
tempfile = "3.23.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bench]]
name = "micro"
harness = false

[[bench]]
name = "ycsb"
harness = false
